gcc/testsuite/rust/rustc/ui/recursion/recursive-static-definition.rs
pub static FOO: u32 = FOO;
// { dg-error ".E0391." "" { target *-*-* } .-1 }

fn main() {}

